tests/ui/imports/import-after-macro-expand-11.stderr
error[E0659]: `H` is ambiguous
  --> $DIR/import-after-macro-expand-11.rs:14:29
   |
LL |            let h: crate::p::H = H;
   |                             ^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `H` could refer to the struct defined here
  --> $DIR/import-after-macro-expand-11.rs:8:5
   |
LL |     struct H;
   |     ^^^^^^^^^
   = help: use `self::H` to refer to this struct unambiguously
note: `H` could also refer to the struct imported here
  --> $DIR/import-after-macro-expand-11.rs:5:9
   |
LL |     use super::*;
   |         ^^^^^^^^
   = help: use `self::H` to refer to this struct unambiguously

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
